@@ -28,7 +28,7 @@
 	lv2:optionalFeature lv2:hardRTCapable ;
 	lv2:extensionData lv2state:interface, lv2worker:interface ;
 	lv2patch:writable drumkv1_lv2:GEN1_SAMPLE ;
-	lv2ui:ui drumkv1_lv2:ui, drumkv1_lv2:ui_external ;
+	lv2ui:ui drumkv1_lv2:ui, drumkv1_lv2:ui_x11, drumkv1_lv2:ui_external ;
 	lv2:port [
 		a lv2:InputPort, lv2atom:AtomPort ;
 		lv2atom:bufferType lv2atom:Sequence ;
